[package]
name = "ndarray-vision"
version = "0.2.0"
authors = ["xd009642 <danielmckenna93@gmail.com>"]
description = "A computer vision library built on top of ndarray"
repository = "https://github.com/xd009642/ndarray-vision"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["image", "vision", "image-processing"]
categories = ["science", "science::robotics", "multimedia", "multimedia::images", "graphics"]
edition = "2018"

[features]
default = ["enhancement", "format", "morphology", "processing", "transform"]
enhancement = []
format = []
morphology = []
processing = []
transform =["ndarray-linalg"]

[dependencies]
ndarray = { version = "0.14", default-features = false }
ndarray-stats = { version = "0.4", default-features = false }
ndarray-linalg = { version = "0.13", default-features = false, optional = true }
noisy_float = { version = "0.2", default-features = false }
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
ndarray-rand = "0.13.0"
rand = "0.8"
assert_approx_eq = "1.1.0"
noisy_float = "0.2"
png = "0.16"
ndarray-linalg = { version = "0.13", features = ["intel-mkl"] }
