[package]
name = "ndarray-vision"
version = "0.5.0"
authors = ["xd009642 <danielmckenna93@gmail.com>"]
description = "A computer vision library built on top of ndarray"
repository = "https://github.com/xd009642/ndarray-vision"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["image", "vision", "image-processing"]
categories = ["science", "science::robotics", "multimedia", "multimedia::images", "graphics"]
edition = "2018"

[features]
default = ["enhancement", "format", "morphology", "processing", "transform" ]
enhancement = []
format = []
morphology = []
processing = []
netlib    = ["ndarray-linalg/netlib"]
openblas  = ["ndarray-linalg/openblas"]
intel-mkl = ["ndarray-linalg/intel-mkl"]
transform = ["ndarray-linalg"]

[dependencies]
ndarray = { version = "0.15", default-features = false }
ndarray-stats = { version = "0.5", default-features = false }
ndarray-linalg = { version = "0.14", default-features = false, optional = true }
noisy_float = { version = "0.2", default-features = false }
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
ndarray = { version = "0.15", features = ["approx"] }
ndarray-rand = "0.14.0"
rand = "0.8"
assert_approx_eq = "1.1.0"
approx = "0.4"
noisy_float = "0.2"
png = "0.16"
ndarray-linalg = { version = "0.14", features = ["intel-mkl"] }
# it is a dependency of intel-mkl-tool, we pin it to temporary solve
# https://github.com/rust-math/intel-mkl-src/issues/68
anyhow = "<1.0.49"
